--- a/.ci/docker/docker-compose-node-edge-test.yml
+++ b/.ci/docker/docker-compose-node-edge-test.yml
@@ -28,7 +28,7 @@ services:
       NODE_FULL_VERSION: ${NODE_FULL_VERSION}
       NVM_NODEJS_ORG_MIRROR: ${NVM_NODEJS_ORG_MIRROR}
       ELASTIC_APM_CONTEXT_MANAGER: ${ELASTIC_APM_CONTEXT_MANAGER}
-      TAV: ${TAV_MODULE}
+      FRAMEWORK: ${TAV_MODULE}
       HOME: /tmp
     volumes:
       - ${PWD}:/app
