--- a/.ci/docker/docker-compose-node-test.yml
+++ b/.ci/docker/docker-compose-node-test.yml
@@ -22,7 +22,7 @@ services:
       MEMCACHED_HOST: 'memcached'
       LOCALSTACK_HOST: 'localstack'
       NODE_VERSION: ${NODE_VERSION}
-      TAV: ${TAV_MODULE}
+      FRAMEWORK: ${TAV_MODULE}
       ELASTIC_APM_CONTEXT_MANAGER: ${ELASTIC_APM_CONTEXT_MANAGER}
       HOME: /tmp
       PATH: /app/node_modules/.bin:./node_modules/.bin:/app/node_modules:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
