--- a/.ci/.jenkins_rc_nodejs.yml
+++ b/.ci/.jenkins_rc_nodejs.yml
@@ -3,7 +3,7 @@
 #
 # The node.js project *sometimes* produces "rc" builds leading up to a new
 # release. They get uploaded to: https://nodejs.org/download/rc/
-NODEJS_VERSION:
+VERSION:
   - "19"
   - "18"
   - "16"
