--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: .ci/scripts/test.sh -b "release" -t "" "${{ matrix.node }}"
         env:
-          - VERSION: ${{ matrix.node }}
-          - ELASTIC_APM_CONTEXT_MANAGER:  ${{ matrix.contextManager }}
+          VERSION: ${{ matrix.node }}
+          ELASTIC_APM_CONTEXT_MANAGER: ${{ matrix.contextManager }}
 
   test-tav:
     runs-on: ubuntu-latest
@@ -70,5 +70,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: .ci/scripts/test.sh -b "release" -t "${{ matrix.framework }}" "${{ matrix.version }}"
         env:
-          - VERSION: ${{ matrix.version }}
-          - ELASTIC_APM_CONTEXT_MANAGER: ''
+          VERSION: ${{ matrix.version }}
+          ELASTIC_APM_CONTEXT_MANAGER: ''
