--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -35,8 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node:
-          - '20'
+        node: [ "20" ]
         contextManager: [ 'patch', '' ]
     steps:
       - uses: actions/checkout@v3
