test: fix tests to work with restify@9
restify@9 was recently released. It only works with node >=v14.18.0
because it added use of https://nodejs.org/api/modules.html#core-modules
This updates restify testing to skip out when there is an incompat
(restify, node) version pair.

Note: It looks like the intent may have been for restify@9 to support
node >=10.0.0, so this may be refined later.

--- a/.tav.yml
+++ b/.tav.yml
@@ -405,16 +405,28 @@ cassandra-driver:
   versions: '>=3 <3.1.0 || >3.1.0 <5'
   commands: node test/instrumentation/modules/cassandra-driver/index.test.js
 
-restify-old:
+# Restify
+# - restify <v10 doesn't work with node v18+ (https://github.com/restify/node-restify/issues/1888)
+# - restify v9 used `require('node:...')` that requires node >v14.18.0
+#   (https://nodejs.org/api/modules.html#core-modules)
+restify-v5-v8:
   name: restify
   versions: '>=5.2.0 <8.0.0'
+  node: '<18.0.0'
   commands:
     - node test/instrumentation/modules/restify/basic.test.js
     - node test/instrumentation/modules/restify/set-framework.test.js
-restify-new:
+restify-v8-v9:
   name: restify
-  node: '>=8.6.0'
-  versions: '>=8.0.0'
+  versions: '>=8.0.0 <9.0.0'
+  node: '>=8.6.0 <18.0.0'
+  commands:
+    - node test/instrumentation/modules/restify/basic.test.js
+    - node test/instrumentation/modules/restify/set-framework.test.js
+restify:
+  name: restify
+  versions: '>=9.0.0'
+  node: '>=14.18.0 <18.0.0'
   commands:
     - node test/instrumentation/modules/restify/basic.test.js
     - node test/instrumentation/modules/restify/set-framework.test.js
