--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "docker:start": "docker-compose -f ./test/docker-compose.yml up -d",
     "docker:stop": "docker-compose -f ./test/docker-compose.yml down",
     "docker:clean": "./test/script/docker/cleanup.sh",
-    "docker:dev": "docker-compose -f ./dev-utils/docker-compose.yml run --workdir=/agent nodejs-agent"
+    "docker:dev": "docker-compose -f ./dev-utils/docker-compose.yml run --workdir=/agent nodejs-agent",
+    "package:tarball": "mkdir -p ./build/dist && npm pack --pack-destination ./build/dist"
   },
   "directories": {
     "test": "test"
