--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "elastic-apm-node": "elastic/apm-agent-nodejs#main",
+    "elastic-apm-node": "^3.40.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
