--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "/examples/esbuild/dist",
     "/examples/typescript/dist",
     "/examples/nextjs",
+    "/examples/an-azure-function-app",
     "/lib/opentelemetry-bridge/opentelemetry-core-mini",
     "/test/babel/out.js",
     "/test/lambda/fixtures/esbuild-bundled-handler/hello.js",
