add a log.warn for, and explicitly ignore, `serviceNodeName` usage in AFs and Lambdas" per spec

--- a/examples/an-azure-function-app/local.settings.json
+++ b/examples/an-azure-function-app/local.settings.json
@@ -4,6 +4,7 @@
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "AzureWebJobsStorage": "",
 
-    "WEBSITE_SITE_NAME": "an-azure-function-app"
+    "WEBSITE_SITE_NAME": "an-azure-function-app",
+    "WEBSITE_INSTANCE_ID": "test-website-instance-id"
   }
 }
