--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -2,18 +2,15 @@ name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
-    workflows: [Test]
+    workflows: [Test, Lint]
     types: [completed]
 
 jobs:
   otel-export-trace:
-    name: OpenTelemetry Export Trace
     runs-on: ubuntu-latest
     steps:
-      - name: Export Workflow Trace
-        uses: inception-health/otel-export-trace-action@latest
+      - uses: elastic/apm-pipeline-library/.github/actions/opentelemetry@current
         with:
-          otlpEndpoint: "${{ secrets.APM_SERVER }}"
-          otlpHeaders: "Authorization=Bearer ${{ secrets.APM_TOKEN }}"
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          runId: ${{ github.event.workflow_run.id }}
+          vaultUrl: ${{ secrets.VAULT_ADDR }}
+          vaultRoleId: ${{ secrets.VAULT_ROLE_ID }}
+          vaultSecretId: ${{ secrets.VAULT_SECRET_ID }}
