feat: Azure Functions (#3071)
Support for tracing/monitoring Azure Functions.
Supported triggers/bindings: HTTP (spec'd), Timer (not spec'd).

Spec: https://github.com/elastic/apm/pull/716
Closes: #3015
Co-authored-by: Brandon Morelli <brandon.morelli@elastic.co>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
     "coverage": "COVERAGE=true ./test/script/run_tests.sh",
     "test": "./test/script/run_tests.sh",
-    "test:deps": "dependency-check index.js start.js start-next.js 'lib/**/*.js' 'test/**/*.js' '!test/instrumentation/modules/next/a-nextjs-app' --no-dev -i async_hooks -i perf_hooks -i parseurl -i node:http",
+    "test:deps": "dependency-check index.js start.js start-next.js 'lib/**/*.js' 'test/**/*.js' '!test/instrumentation/modules/next/a-nextjs-app' --no-dev -i async_hooks -i perf_hooks -i parseurl -i node:http -i @azure/functions-core",
     "test:tav": "tav --quiet && (cd test/instrumentation/modules/next/a-nextjs-app && tav --quiet)",
     "test:docs": "./test/script/docker/run_docs.sh",
     "test:types": "tsc --project test/types/tsconfig.json && tsc --project test/types/transpile/tsconfig.json && node test/types/transpile/index.js && tsc --project test/types/transpile-default/tsconfig.json && node test/types/transpile-default/index.js",
@@ -94,7 +94,8 @@
     "basic-auth": "^2.0.1",
     "cookie": "^0.5.0",
     "core-util-is": "^1.0.2",
-    "elastic-apm-http-client": "11.0.4",
+    "debug": "^4.1.1",
+    "elastic-apm-http-client": "11.1.0",
     "end-of-stream": "^1.4.4",
     "error-callsites": "^2.0.4",
     "error-stack-parser": "^2.0.6",
@@ -104,13 +105,14 @@
     "is-native": "^1.0.1",
     "lru-cache": "^6.0.0",
     "measured-reporting": "^1.51.1",
+    "module-details-from-path": "^1.0.3",
     "monitor-event-loop-delay": "^1.0.0",
     "object-filter-sequence": "^1.0.0",
     "object-identity-map": "^1.0.2",
     "original-url": "^1.2.3",
     "pino": "^6.11.2",
     "relative-microtime": "^2.0.0",
-    "require-in-the-middle": "^5.2.0",
+    "resolve": "^1.22.1",
     "semver": "^6.3.0",
     "set-cookie-serde": "^1.0.0",
     "shallow-clone-shim": "^2.0.0",
@@ -134,6 +136,7 @@
     "apollo-server-core": "^3.0.0",
     "apollo-server-express": "^3.0.0",
     "aws-sdk": "^2.622.0",
+    "azure-functions-core-tools": "^4.0.4915",
     "backport": "^5.1.2",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
@@ -174,7 +177,6 @@
     "memcached": "^2.2.2",
     "mimic-response": "^2.1.0",
     "mkdirp": "^0.5.1",
-    "module-details-from-path": "^1.0.3",
     "mongodb": "^4.2.1",
     "mongodb-core": "^3.2.7",
     "mysql": "^2.18.1",
@@ -194,6 +196,7 @@
     "tedious": "^15.1.0",
     "test-all-versions": "^4.1.1",
     "thunky": "^1.1.0",
+    "tree-kill": "^1.2.2",
     "typescript": "^4.7.4",
     "undici": "^5.8.0",
     "vasync": "^2.2.0",
