--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
     "url": "https://github.com/elastic/apm-agent-nodejs/issues"
   },
   "homepage": "https://github.com/elastic/apm-agent-nodejs",
-  "XXX elastic-apm-http-client": "11.2.0",
   "dependencies": {
     "@elastic/ecs-pino-format": "^1.2.0",
     "@opentelemetry/api": "^1.1.0",
@@ -96,7 +95,7 @@
     "cookie": "^0.5.0",
     "core-util-is": "^1.0.2",
     "debug": "^4.1.1",
-    "elastic-apm-http-client": "github:elastic/apm-nodejs-http-client#trentm/agent.installation.method",
+    "elastic-apm-http-client": "11.2.0",
     "end-of-stream": "^1.4.4",
     "error-callsites": "^2.0.4",
     "error-stack-parser": "^2.0.6",
