--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -133,34 +133,7 @@ jobs:
           - '10.0'
           - '8'
           - '8.6'
-        os: [ubuntu-latest, windows-latest]
-        ## windows-latest will test node 14 so let's exclude other versions
-        exclude:
-          - os: windows-latest
-            node: 19
-          - os: windows-latest
-            node: 18
-          - os: windows-latest
-            node: 18.0
-          - os: windows-latest
-            node: 16
-          - os: windows-latest
-            node: 16.0
-          - os: windows-latest
-            node: 16.0
-          - os: windows-latest
-            node: 12
-          - os: windows-latest
-            node: 12.0
-          - os: windows-latest
-            node: 10
-          - os: windows-latest
-            node: 10.0
-          - os: windows-latest
-            node: 8
-          - os: windows-latest
-            node: 8.6
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
