--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -12,6 +12,11 @@ on:
     paths-ignore:
       - '**.md'
       - '**.asciidoc'
+  pull_request:
+    paths-ignore:
+      - '**.md'
+      - '**.asciidoc'
+    types: [ labeled ]
 
 # limit the access of the generated GITHUB_TOKEN
 permissions:
@@ -29,6 +34,8 @@ jobs:
   # made, these will stop and there will be no value in testing v17 nightlies.
   #
   test-nightly:
+    # PRs labelled with ci:test-nightly or builds running on main
+    if: contains(github.event.pull_request.labels.*.name, 'ci:test-nightly') || ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
@@ -49,6 +56,8 @@ jobs:
   # The node.js project *sometimes* produces "rc" builds leading up to a new
   # release. They get uploaded to: https://nodejs.org/download/rc/
   test-rc:
+    # PRs labelled with ci:test-rc or builds running on main
+    if: contains(github.event.pull_request.labels.*.name, 'ci:test-rc') || ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
