--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -2,7 +2,7 @@ name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
-    workflows: [Test, Lint]
+    workflows: [Edge, Test, Lint]
     types: [completed]
 
 jobs:
