action: checkout PR sha when using github command

--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -33,7 +33,7 @@ jobs:
   #
   test-nightly:
     # Builds running on main or comment with /test-nightly
-    if: ${{ github.ref == 'refs/heads/main' }} || ( contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/test-nightly') )
+    if: ${{ github.ref == 'refs/heads/main' }} || ( ${{ github.event.issue.pull_request }} && contains(github.event.comment.body, '/test-nightly') )
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
@@ -42,7 +42,25 @@ jobs:
         node: [ "20" ]
         contextManager: [ 'patch', '' ]
     steps:
+      - id: sha-for-pr
+        if: ${{ github.event.issue.pull_request }}
+        uses: actions/github-script@v4
+        with:
+          result-encoding: string
+          script: |
+            const { owner, repo, number } = context.issue;
+            const pr = await github.pulls.get({
+              owner,
+              repo,
+              pull_number: number,
+            });
+            return pr.data.head.sha
       - uses: actions/checkout@v3
+        if: ${{ github.event.issue.pull_request }}
+        with:
+          ref: ${{ steps.sha-for-pr.outputs.result }}
+      - uses: actions/checkout@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
       - run: .ci/scripts/test.sh -b "nightly" "${{ matrix.node }}"
         env:
           VERSION: ${{ matrix.node }}
@@ -55,7 +73,7 @@ jobs:
   # release. They get uploaded to: https://nodejs.org/download/rc/
   test-rc:
     # Builds running on main or comment with /test-rc
-    if: ${{ github.ref == 'refs/heads/main' }} || ( contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/test-rc') )
+    if: ${{ github.ref == 'refs/heads/main' }} || ( ${{ github.event.issue.pull_request }} && && contains(github.event.comment.body, '/test-rc') )
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
@@ -68,7 +86,25 @@ jobs:
           - "14"
         contextManager: [ 'patch', '' ]
     steps:
+      - id: sha-for-pr
+        if: ${{ github.event.issue.pull_request }}
+        uses: actions/github-script@v4
+        with:
+          result-encoding: string
+          script: |
+            const { owner, repo, number } = context.issue;
+            const pr = await github.pulls.get({
+              owner,
+              repo,
+              pull_number: number,
+            });
+            return pr.data.head.sha
       - uses: actions/checkout@v3
+        if: ${{ github.event.issue.pull_request }}
+        with:
+          ref: ${{ steps.sha-for-pr.outputs.result }}
+      - uses: actions/checkout@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
       - run: .ci/scripts/test.sh -b "rc" "${{ matrix.node }}"
         env:
           VERSION: ${{ matrix.node }}
