--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,3 +28,5 @@ jobs:
         node-version: '16'
     - run: npm install
     - run: npm run lint
+    - run: .ci/scripts/test_basic.sh
+    - run: .ci/scripts/test_types_babel_esm.sh
