action: reuse runner with ELASTIC_APM_CONTEXT_MANAGER=patch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,6 @@
 # - the "TAV" tests that run against all supported versions of instrumented
 #   modules
 # - the integration tests that run with an apm-server
-# - testing with ELASTIC_APM_CONTEXT_MANAGER=patch (i.e. without using async_hooks)
 # - code coverage (npm run coverage)
 
 name: Test
@@ -144,6 +143,10 @@ jobs:
     - run: npm ls --all || true
     - name: npm test
       run: npm test
+    - name: npm test ELASTIC_APM_CONTEXT_MANAGER=patch
+      run: npm test
+      env:
+        ELASTIC_APM_CONTEXT_MANAGER: patch
     - uses: inception-health/otel-upload-test-artifact-action@v1
       if: always()
       continue-on-error: true
