--- a/.github/workflows/tav.yml
+++ b/.github/workflows/tav.yml
@@ -19,6 +19,10 @@ on:
     - 'docs/**'
     - 'examples/**'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
 # limit the access of the generated GITHUB_TOKEN
 permissions:
   contents: read
