--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -42,6 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: .ci/scripts/test.sh -b "nightly" "${{ matrix.node }}"
+        env:
           ELASTIC_APM_CONTEXT_MANAGER: ${{ matrix.contextManager }}
 
   # This should list all active Node.js major versions listed at:
