--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@fastify/formbody": "^7.0.1",
     "@hapi/hapi": "^21.0.0",
     "@koa/router": "^12.0.0",
+    "@opentelemetry/exporter-prometheus": "^0.35.1",
     "@types/node": "^18.11.9",
     "@types/pino": "^6.3.8",
     "ajv": "^7.2.4",
