--- a/examples/opentelemetry-metrics/package.json
+++ b/examples/opentelemetry-metrics/package.json
@@ -17,5 +17,8 @@
     "elastic-apm-node": "file:../..",
     "fastify": "^4.12.0",
     "prom-client": "^14.1.1"
+  },
+  "devDependencies": {
+    "dotenv-cli": "^7.0.0"
   }
 }
