--- a/examples/opentelemetry-metrics/prometheus.yml
+++ b/examples/opentelemetry-metrics/prometheus.yml
@@ -12,12 +12,17 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'prom-prom'
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['localhost:3003']
-
-  - job_name: 'otel-prom'
+  - job_name: 'use-prom'
     scrape_interval: 5s
     static_configs:
       - targets: ['localhost:3001']
+
+  - job_name: 'use-otel-prom'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['localhost:3002']
+
+  - job_name: 'use-otel-prom-elastic'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['localhost:3004']
