--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,6 +118,7 @@ jobs:
 
     strategy:
       matrix:
+        max-parallel: 10
         node:
           - '19'
           - '18'
@@ -135,7 +136,7 @@ jobs:
         contextManager: [ 'patch', '' ]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node }}
