flail around this GH Action error:
    The workflow is not valid. .github/workflows/test.yml (Line: 121, Col: 23): Unexpected value '10'

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,7 +118,7 @@ jobs:
 
     strategy:
       matrix:
-        max-parallel: 10
+        max-parallel: '10'
         node:
           - '19'
           - '18'
